--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Install dependencies
         run: go mod tidy
 
+      - name: Install custom linter
+        run: go build -o mylint ./cmd/staticlint
+
+      - name: Run custom linter
+        run: ./mylint ./...
+
       - name: Run tests with coverage (excluding mocks folder)
         run: |
           go test -v $(go list ./... | grep -v "/mocks|/cmd") -coverprofile=coverage.out
